css url path fix

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: Index
 
 	<p>但愿每个脚印都清晰留存</p>
 
-    <img width="100%" src="/image/index_back.jpg">
+    <img width="100%" src="{{ "/image/index_back.jpg" | prepend: site.baseurl }}">
 
     <hr>
     
