add tag relative path

--- a/pages/about.html
+++ b/pages/about.html
@@ -13,7 +13,7 @@ permalink: /about/
 
 	<p>却忽然忘了是怎麽样的一个开始﻿</p>
 
-    <img width="100%" src="/image/index_back.jpg">
+    <img width="100%" src="{{ "/image/index_back.jpg" | prepend: site.baseurl }}">
 
     <hr>
     
